@@ -230,11 +230,6 @@ e405ffe60287739b4dbaa630e572de2987130d0d assets\mmorpg\models\item\uniques\sword
 d1778dd6c1fa3ccaf6d195fee8328b94b0364d3d assets\mmorpg\models\item\uniques\sword\swordwater0.json
 96a6df2310dafafb75135d9aecc0ce59558c3285 assets\mmorpg\models\item\uniques\sword\thunder_ele_saber0.json
 28fcd38057c3613a37950954021f27bbbd95280f assets\mmorpg\models\item\uniques\sword\water_ele_saber0.json
-ecf414c672db5a2ce9bb77410c684dac2bc7c3e7 assets\mmorpg\models\item\wand\wand0.json
-fb7be171683059fd5721252d6c6ae38b00a19bc5 assets\mmorpg\models\item\wand\wand1.json
-1d1633b4775c2c342d4d8706ede4c67af0d50c8e assets\mmorpg\models\item\wand\wand2.json
-6a5615bfedb5a3e912ad3079851b83aa164bd552 assets\mmorpg\models\item\wand\wand3.json
-312c9535b4fc76e18d51241803968c38bd63ceaa assets\mmorpg\models\item\wand\wand4.json
 ca1003e72af918f46c7ca3c99d54d957f0369999 data\mmorpg\advancements\mine_and_slash\add_affix.json
 88c5586c50616c30a1e8c49bc112e6c68869a165 data\mmorpg\advancements\mine_and_slash\adv_map.json
 1e45cc8f96867b1be05f6e2c97d9e7e8b013b73a data\mmorpg\advancements\mine_and_slash\auto_salvage_bag0.json
@@ -327,15 +322,15 @@ f78d2b558cbc9b19239dcd3d07fad2e1c0615e76 data\mmorpg\affixes\prefix\fire_imbued.
 9a68ce8dd902df72cc95d1ca9ab9ee3fc92e3096 data\mmorpg\affixes\prefix\frosty.json
 0fad91ee9b4d36f414ad8c2ee860acb8e193ce31 data\mmorpg\affixes\prefix\gatekeepers.json
 2ca10153cdb25650e413bbbc59a396652756c7e7 data\mmorpg\affixes\prefix\hardened.json
-86019632116be95cc5d9617a633c2480135f2876 data\mmorpg\affixes\prefix\hard_hitting.json
+d468744bc87caeb6c5aed7e2f415bbe9c41bd119 data\mmorpg\affixes\prefix\hard_hitting.json
 46d332a2a51b56596649a6271fe8b82b4997dec1 data\mmorpg\affixes\prefix\heavenly_skin.json
-8b3e81b98e899c5235f3712a201f81274d9d0dc9 data\mmorpg\affixes\prefix\heavenly_strikes.json
+80630ca2b631a3531853a0eb5ac9e934d94050b5 data\mmorpg\affixes\prefix\heavenly_strikes.json
 b150003a2a75be16c4a8be65e2ddf83eadc0b337 data\mmorpg\affixes\prefix\heros.json
 6cd47873daf75e001fc4eb97b47181dbede88af5 data\mmorpg\affixes\prefix\inner_spirit.json
-7406bf04bbae3590a3740d82f3baa35a9cc56a9b data\mmorpg\affixes\prefix\life_stealing.json
+802d44dc071a0dc84a1d370de32db59780d9d5a1 data\mmorpg\affixes\prefix\life_stealing.json
 f069d5ea81bac9fd987b27b2abe889038692790a data\mmorpg\affixes\prefix\looters.json
 5d2cd6e0195a4830a73ca7d73e0d8118e1a16639 data\mmorpg\affixes\prefix\magical.json
-b80bcbbf31e5c792bfa566f54353062cc7a1b089 data\mmorpg\affixes\prefix\magic_siphon.json
+9378be9e26ec047a6f0768f58cee8735708e3d0f data\mmorpg\affixes\prefix\magic_siphon.json
 0739de8c593f318edebcb6ff1e3351c22b1a38cf data\mmorpg\affixes\prefix\nature_heretic.json
 9bc2c13d6da82a68d3b0aae8325a7553e0584ab4 data\mmorpg\affixes\prefix\nature_imbued.json
 142116213108fabc5d7de24a5ff9417e98059e89 data\mmorpg\affixes\prefix\nature_shield.json
@@ -361,14 +356,14 @@ e6f0ed070a3f84b0bfd8c1ca9c8625bb776a4ae5 data\mmorpg\affixes\suffix\of_axe_flurr
 7242fd6282ea784d99e0a835b4ba89092b26a3f9 data\mmorpg\affixes\suffix\of_balance.json
 22c64be2aa0bc43ce4c77f084b7760eea0aecc44 data\mmorpg\affixes\suffix\of_behemoths.json
 be04be6f230fb83adba66c8a5f18e99c06bee5f1 data\mmorpg\affixes\suffix\of_bow_flurry.json
-bc845f27258b67d48123b9570af38911de91ed26 data\mmorpg\affixes\suffix\of_critical_damage.json
-9ba9be28b139b784dd3937378bc5501eff14707d data\mmorpg\affixes\suffix\of_critical_hits.json
-9d7d0ec524a465dffbf043fb495def71e07e0cfb data\mmorpg\affixes\suffix\of_critical_unity.json
+d761eaf98f84e709ee2651ad25f5bea49684c80e data\mmorpg\affixes\suffix\of_critical_damage.json
+eb971eb86ee8cdd584af5d33c2401434d9333123 data\mmorpg\affixes\suffix\of_critical_hits.json
+bcb77cbf114036e529945cdc284721c815dca52f data\mmorpg\affixes\suffix\of_critical_unity.json
 f22ce270a6dcca177109a617e926036f5af9094e data\mmorpg\affixes\suffix\of_crossbow_flurry.json
 23504a52434b5d6387fc753918fbb204eb6877af data\mmorpg\affixes\suffix\of_ele_resist.json
 7ffffff30f330400c415537ce88b8b9f5760cf17 data\mmorpg\affixes\suffix\of_fire_dissonance.json
 6c0fcd88e41c08da3a81d6e85da9ba4262951fd1 data\mmorpg\affixes\suffix\of_fire_storms.json
-e93192b3943f5fef07fcdeaec82c6ffbd2b7875e data\mmorpg\affixes\suffix\of_force.json
+aba71a78b2628b8dad7281eaf6c023a70687600b data\mmorpg\affixes\suffix\of_force.json
 f907cc7cd470723b686f5cf81a578a7bbb3576f0 data\mmorpg\affixes\suffix\of_giants.json
 8e12b9261102f61826afa7ff4ff9f70acdccac8b data\mmorpg\affixes\suffix\of_godhood.json
 c215dbdb1b22523fa77a16fd10f36826e29bcfab data\mmorpg\affixes\suffix\of_guidance.json
@@ -376,7 +371,7 @@ c215dbdb1b22523fa77a16fd10f36826e29bcfab data\mmorpg\affixes\suffix\of_guidance.
 5e24e113415bda8221d6e6f36d75303da03e346b data\mmorpg\affixes\suffix\of_hidden_sense.json
 f8ce2b9490ea15226851182e06c319ea0f2a7da5 data\mmorpg\affixes\suffix\of_immortality.json
 67dcead8aa4850c5403d5388772e76e12bb3dbe5 data\mmorpg\affixes\suffix\of_magic_shield.json
-e635da34716281cf674dd87aab2100d6938a3493 data\mmorpg\affixes\suffix\of_magic_stealing.json
+34329b3d86dbeec4c23f788d089c373dae0975d4 data\mmorpg\affixes\suffix\of_magic_stealing.json
 79d7a5e8dec88ba14d0ea55185209d8cb9de7331 data\mmorpg\affixes\suffix\of_major_affinity_fire.json
 5055a8a2a07876c7cbc68d40eb04217a931c7514 data\mmorpg\affixes\suffix\of_major_affinity_nature.json
 85e644a5de5c77bc988acd4cff0384aa2daa9d25 data\mmorpg\affixes\suffix\of_major_affinity_thunder.json
@@ -384,7 +379,7 @@ e635da34716281cf674dd87aab2100d6938a3493 data\mmorpg\affixes\suffix\of_magic_ste
 71f4701919f0a871741237f8087b64354b4cd447 data\mmorpg\affixes\suffix\of_mana_regen.json
 ee9989a3989bb1c4a51251a1b7be80e49ec386c1 data\mmorpg\affixes\suffix\of_nature_dissonance.json
 3433be11827de1faf49f944c7d735cb33e9d8461 data\mmorpg\affixes\suffix\of_nature_storms.json
-73848c0b58a63be8c584143003122ed81b69b6bd data\mmorpg\affixes\suffix\of_rock_piercing.json
+3d841ea99d4358f025a7de46f953125257df414c data\mmorpg\affixes\suffix\of_rock_piercing.json
 f9361835d6a95aa919ac6212e2ecd1b021087ecc data\mmorpg\affixes\suffix\of_rock_skin.json
 8acb15fda8480e5362057d6b2339f1044e6c1890 data\mmorpg\affixes\suffix\of_staff_flurry.json
 0ba55a8e2580922aaaa336d47018fe9c04aafcb4 data\mmorpg\affixes\suffix\of_swiftness.json
@@ -395,7 +390,7 @@ a40a72bf869d50d25682ead1520a19766657340a data\mmorpg\affixes\suffix\of_the_sage.
 1d3850e8d14889eb3c503689e2ed3f10942265a4 data\mmorpg\affixes\suffix\of_thunder_dissonance.json
 b3f0bb7c25a4188dd8b6085a3eebcb77949bef90 data\mmorpg\affixes\suffix\of_thunder_storms.json
 a0c9a99b3c132ec39d23bdb3205b9906de8f4e33 data\mmorpg\affixes\suffix\of_trident_flurry.json
-7ebc375ce2436fb272a6fd5cd7beda1450a8e897 data\mmorpg\affixes\suffix\of_vampirism.json
+66f9565d7839897e919da5538bb2b9200adb0dd4 data\mmorpg\affixes\suffix\of_vampirism.json
 b827f4fb52163add6bf30a330af4b3e87ae83e86 data\mmorpg\affixes\suffix\of_vitality.json
 4363b71b6f53cb39aeaebd94ff7e4ff37fc5b6f0 data\mmorpg\affixes\suffix\of_wand_flurry.json
 408577c8b713b340aedd9b36e4c861b211a0ecc0 data\mmorpg\affixes\suffix\of_water_dissonance.json
@@ -604,17 +599,12 @@ c5393092a78aa32700ec3bc9d5b688bc98c380f9 data\mmorpg\compatible_items\mmorpg\uni
 456ec6c5360f669143439de9074721e9adc2de9d data\mmorpg\compatible_items\mmorpg\uniques\sword\swordwater0.json
 1fcf512a6df10791594fc46039edf3bd010387ef data\mmorpg\compatible_items\mmorpg\uniques\sword\thunder_ele_saber0.json
 588346451536df8fdd2d1b919ea059ca1eb115c8 data\mmorpg\compatible_items\mmorpg\uniques\sword\water_ele_saber0.json
-c60a51eb4b60d117f96d3954c5f628d7ed4bae4b data\mmorpg\compatible_items\mmorpg\wand\wand0.json
-d7ae8340aa9d135bb79eb929fcf5b7e98cc15c40 data\mmorpg\compatible_items\mmorpg\wand\wand1.json
-329bb3e11dd660e08c6a0f8362b4552c5ae77ccc data\mmorpg\compatible_items\mmorpg\wand\wand2.json
-c008f702eff67a1fcfa35556e6725777a8cf67ef data\mmorpg\compatible_items\mmorpg\wand\wand3.json
-fe1c0a3b13562ebb717f5b1e289ed8f85a1bb98e data\mmorpg\compatible_items\mmorpg\wand\wand4.json
-b405d7e778c6a9ac6eafe45d7db2ed145d1df1b2 data\mmorpg\rarity\gear\common.json
-375c4b33a6ad7f0c06026b2f5b4f0f0f514409ae data\mmorpg\rarity\gear\epic.json
-288117b3162ffad75cd71bdcca1c1d3b30372616 data\mmorpg\rarity\gear\legendary.json
-65175f50bb7526535d6b2bd542535608a8aea248 data\mmorpg\rarity\gear\rare.json
-cf7ec8379a34071c72185b0149c3ec6709e81eb0 data\mmorpg\rarity\gear\uncommon.json
-7bede4a154bcbfeaed59fcbdb5616b86cb90f193 data\mmorpg\rarity\gear\unique.json
+138a44771f6f7bfc34575a2a98faeb211e06cee9 data\mmorpg\rarity\gear\common.json
+746ab66ebf2418cfc6e173c6566c992f45c09641 data\mmorpg\rarity\gear\epic.json
+03e5bb7d487cf1d9fc61ce2316fd3258d822ce6e data\mmorpg\rarity\gear\legendary.json
+a51986323f74c106990867b1b3c35988781aed3b data\mmorpg\rarity\gear\rare.json
+184940a7ca09c128f6adf0bbb41bb513aef23469 data\mmorpg\rarity\gear\uncommon.json
+a6c5e7b91be0124fd4f372080c1c124b4c3eb671 data\mmorpg\rarity\gear\unique.json
 aa165983994f69c0fcbb267323b73e686b8836bb data\mmorpg\recipes\alchemy\instant\misc\remove_spell.json
 edd5e0064a697ca7e5e1c5877ca4408ebf7649a4 data\mmorpg\recipes\alchemy\instant\misc\remove_talent.json
 5b1506cc42be196e1c00a1e56b67aab52a0548aa data\mmorpg\recipes\alchemy\instant\misc\reset_spells.json
@@ -654,20 +644,20 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-64a92756f53d4e0d3d531c2b15ac510ee9915865 data\mmorpg\runes\ano.json
+4f69c449cf61b3f6620db09fc4013c3b1248b695 data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-b65c40cfc73bf94539cbc839cea1d530db1ca2a3 data\mmorpg\runes\cen.json
-346cf236687441957017cd71f1220b86110209a1 data\mmorpg\runes\dos.json
-df7b2dc13aa9b866ca20c6a3f6bfaca45fde1e27 data\mmorpg\runes\goh.json
-5e4b35d4ed64f19eb455e3bfa2be2e6d40565b83 data\mmorpg\runes\ita.json
-d89e2b2fd21b4a2495153b8c66591f5582f119b0 data\mmorpg\runes\mos.json
+aa228ffa76909a04eaf7d75f3e9486fb346ec88b data\mmorpg\runes\cen.json
+f8d886073192f126de39b6892ccd9581c5fb1591 data\mmorpg\runes\dos.json
+eee1049ba83211ac628db25fb0ca52f89130950c data\mmorpg\runes\goh.json
+81b9101f37320db78e639e0f67d649a2b557e216 data\mmorpg\runes\ita.json
+b7f5e804d313d543ed12c15f1ed973e2f377ed7c data\mmorpg\runes\mos.json
 abf4b76079a6c93e9b9d739cb0faa8bc5dcc4353 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-1ce75c3cd4cb15c20ff3544a3092886c3221de0f data\mmorpg\runes\qar.json
-505e7f3822d440bc11d75888a77c86d3e44a73bc data\mmorpg\runes\rah.json
-0b3edf2c849b252b294467accff7715947e50662 data\mmorpg\runes\voh.json
-6299f2ca698e24639693288b093d65932fafd04d data\mmorpg\runes\wor.json
-d8dda707da0534e88621e1ce913dd80b24430080 data\mmorpg\runes\xah.json
+b4b69eef125f3bae12173477b72ac0f63735ec1f data\mmorpg\runes\qar.json
+4abab5496e047df0ecb4c2b7af53ed7e7788c887 data\mmorpg\runes\rah.json
+74a60895956d128113575f323565f5e4e1cfaafc data\mmorpg\runes\voh.json
+039d5edaaebbc510d30113f7b8e50b719f2786f4 data\mmorpg\runes\wor.json
+29a7d63402467efd125257281c7f0a7a3f7709f3 data\mmorpg\runes\xah.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
@@ -780,8 +770,8 @@ f030c00f817427c3b60b24feeef9c86e95aa87f8 data\mmorpg\unique_gears\plate_pants\pa
 4a42a65189d2ffc999d0bb6b5278af9bcac311a6 data\mmorpg\unique_gears\plate_pants\pantswater0.json
 c6f909e44012d45d5193c4d01f7800d5b54521f8 data\mmorpg\unique_gears\ring\fire_ele_ring0.json
 1619364f43157df2935a32457b5d7e8704eacbf7 data\mmorpg\unique_gears\ring\nature_ele_ring0.json
-08d3125facd7703c1ae6cfe670dfb6c3f011451a data\mmorpg\unique_gears\ring\ringcrit0.json
-8dde0b312d74a5bea329548934a52161be791a45 data\mmorpg\unique_gears\ring\ringdodge0.json
+8371136b24c3d0d98040bcd4f2dc43fc89486ccb data\mmorpg\unique_gears\ring\ringcrit0.json
+0193c1f6d82ea78cf1dbd0bbe368996ce3ae6c53 data\mmorpg\unique_gears\ring\ringdodge0.json
 b2a5ce7f13a9f7c14e3924665e9e859dd6cb96e7 data\mmorpg\unique_gears\ring\ringenergy0.json
 db07968ab97b57340dde7f84e225fdb709641eba data\mmorpg\unique_gears\ring\ringwaterfire0.json
 6e0904b515f3536582fe0b39db17695ce4a78428 data\mmorpg\unique_gears\ring\ring_hermit_insanity.json
