@@ -16,8 +16,7 @@
           "axe",
           "trident",
           "staff",
-          "sword",
-          "wand"
+          "sword"
         ]
       },
       {
