@@ -1,11 +1,9 @@
 package com.robertx22.mine_and_slash.config.base_player_stat;
 
 import com.robertx22.mine_and_slash.database.stats.Stat;
-import com.robertx22.mine_and_slash.database.stats.types.defense.Armor;
 import com.robertx22.mine_and_slash.database.stats.types.offense.CriticalDamage;
 import com.robertx22.mine_and_slash.database.stats.types.offense.CriticalHit;
 import com.robertx22.mine_and_slash.database.stats.types.offense.PhysicalDamage;
-import com.robertx22.mine_and_slash.database.stats.types.offense.SpellDamage;
 import com.robertx22.mine_and_slash.database.stats.types.resources.*;
 import com.robertx22.mine_and_slash.registry.ISlashRegistryInit;
 import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.IApplyableStats;
@@ -27,10 +25,8 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
         c.base(HealthRegen.getInstance(), 2);
         c.base(MagicShieldRegen.getInstance(), 2);
         c.base(PhysicalDamage.getInstance(), 3);
-        c.base(Armor.getInstance(), 10);
         c.base(CriticalHit.getInstance(), 1);
         c.base(CriticalDamage.getInstance(), 0);
-        c.base(SpellDamage.getInstance(), 3);
 
         //scaling ones
 
@@ -42,10 +38,10 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
 
         c.scale(Health.getInstance(), 5);
         c.scale(HealthRegen.getInstance(), 1);
-        c.scale(MagicShieldRegen.getInstance(), 1);
+        c.scale(MagicShieldRegen.getInstance(), 0.5F);
         c.scale(PhysicalDamage.getInstance(), 0.3D);
-        c.scale(Armor.getInstance(), 5);
-        c.scale(SpellDamage.getInstance(), 0.25D);
+        //c.scale(Armor.getInstance(), 5);
+        //c.scale(SpellDamage.getInstance(), 0.25D);
 
         return c;
 
@@ -70,12 +66,18 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
     @Override
     public void applyStats(EntityCap.UnitData data) {
 
-        this.BASE_PLAYER_STATS.entrySet().forEach(x -> {
-            data.getUnit().getCreateStat(x.getKey()).Flat += x.getValue();
-        });
-        this.PLAYER_STATS_THAT_SCALE_TO_LEVEL.entrySet().forEach(x -> {
-            data.getUnit().getCreateStat(x.getKey()).addFlat(x.getValue().floatValue(), data.getLevel());
-        });
+        this.BASE_PLAYER_STATS.entrySet()
+            .forEach(x -> {
+                data.getUnit()
+                    .getCreateStat(x.getKey()).Flat += x.getValue();
+            });
+        this.PLAYER_STATS_THAT_SCALE_TO_LEVEL.entrySet()
+            .forEach(x -> {
+                data.getUnit()
+                    .getCreateStat(x.getKey())
+                    .addFlat(x.getValue()
+                        .floatValue(), data.getLevel());
+            });
 
     }
 
